# nixos-conf-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  meson.build  result  vlinkz.nixosconfeditor.policy
data/: dev.vlinkz.NixosConfEditor.desktop.in.in  dev.vlinkz.NixosConfEditor.gschema.xml.in  dev.vlinkz.NixosConfEditor.metainfo.xml.in.in  dev.vlinkz.NixosConfEditor.policy.in.in  meson.build
modules/: default.nix
nce-helper/: Cargo.toml
nce-helper/src/: main.rs  meson.build
po/: POTFILES.in
shells/default/: default.nix
shells/nixos-conf-editor/: default.nix
src/: config.rs.in  lib.rs  main.rs  meson.build
src/parse/: cache.rs  config.rs  mod.rs  options.rs  preferences.rs
src/ui/: about.rs  mod.rs  nameentry.rs  optionpage.rs  preferencespage.rs  quitdialog.rs  rebuild.rs  savechecking.rs  searchentry.rs  searchfactory.rs  searchpage.rs  treefactory.rs  welcome.rs  window.rs  windowloading.rs
