[package]
name = "nixos-conf-editor"
version = "0.0.5"
edition = "2021"
default-run = "nixos-conf-editor"

[dependencies]
relm4 = { git = "https://github.com/Relm4/Relm4", tag = "v0.5.0-beta.2", features = ["all"]  }
relm4-components = { package = "relm4-components", git = "https://github.com/Relm4/Relm4", tag = "v0.5.0-beta.2"}
adw = { package = "libadwaita", git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", features = ["v1_2", "gtk_v4_6"] }
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", features = ["v4_6"] }
sourceview5 = { git = "https://gitlab.gnome.org/World/Rust/sourceview5-rs/", rev = "6082210f7d1fc32b100bd9c714e9521eecacb3f7", features = ["v5_4"] }
tracker = "0.1"
tokio = { version = "1.21", features = ["rt", "macros", "time", "rt-multi-thread", "sync"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ijson = "0.1"

nix-editor = "0.2.12"

html2pango = "0.5"
pandoc = "0.8"

brotli = "3.3"
reqwest = { version = "0.11", features = ["blocking"] }

log = "0.4"
pretty_env_logger = "0.4"

[workspace]
members = [".", "nce-helper"]
default-members = [".", "nce-helper"]
