[package]
name = "nixos-conf-editor"
version = "0.1.0"
edition = "2021"
default-run = "nixos-conf-editor"

[dependencies]
relm4 = { version = "0.5.0-beta.4", features = ["all"]  }
relm4-components = { package = "relm4-components", version = "0.5.0-beta.4"}
adw = { package = "libadwaita", version = "0.2", features = ["v1_2", "gtk_v4_6"] }
gtk = { package = "gtk4", version = "0.5", features = ["v4_6"] }
sourceview5 = { version = "0.5", features = ["v5_4"] }
tracker = "0.1"
tokio = { version = "1.21", features = ["rt", "macros", "time", "rt-multi-thread", "sync"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ijson = "0.1"

nix-editor = "0.3.0-beta.1"
nix-data = { git = "https://github.com/snowflakelinux/nix-data" }

anyhow = "1.0"

html2pango = "0.5"
pandoc = "0.8"

log = "0.4"
pretty_env_logger = "0.4"

[workspace]
members = [".", "nce-helper"]
default-members = [".", "nce-helper"]
